<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LvCaiHui</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="register_cellphoneNum_hint">请输入您的手机号码</string>
    <string name="register_pwd_hint">请输入密码</string>
    <string name="register_repwd_hint">请再次输入</string>
    <string name="register_verifycode_hint">请输入验证码</string>
    <string name="register_get_verifycode">获取验证码</string>
    <string name="register_ok_btn">确定</string>
    <string name="register_render">提示：若您收到我们已为您开通账户的短信或邮件信息， 您将无需再注册，直接登录即可</string>
    <string name="register_login_btn">直接登录</string>
    <string name="title_activity_login">Login</string>
    <string name="login_no_count_reminder">还没有账号？</string>
    <string name="login_forget_pwd_reminder">忘记密码?</string>
    <string name="login_btn">确定</string>
    <string name="login_edt_phoneNum_hint">请输入账号</string>
    <string name="login_edt_pwd_hint">请输入密码</string>
    <string name="login_go_register_btn" >注册</string>

</resources>
