<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greenstone.lvcaihui.Login">

    <EditText
        android:id="@+id/login_phoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@android:drawable/edit_text"
        android:hint="@string/login_edt_phoneNum_hint"/>
    <EditText
        android:id="@+id/longin_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edt_pwd_hint"
        android:background="@android:drawable/edit_text"
        android:layout_below="@+id/login_phoneNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:id="@+id/login_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/longin_pwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forget_pwd_reminder"
        android:id="@+id/login_forget_pwd_tv"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_no_count_reminder"
        android:id="@+id/textView2"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/login_go_register_btn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_go_register_btn"
        android:id="@+id/login_go_register_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
